# collective-intelligence

./: .dockerignore  .gitattributes  .gitignore  .redocly.yaml  .spectral.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPLIANCE.md  CONTRIBUTING.md  DCO.md  NOTICE  README.de.md  README.es.md  README.fr.md  README.ja.md  README.ko.md  README.md  README.pt-BR.md  README.ru.md  README.zh-CN.md  RELEASING.md  REUSE.toml  SECURITY.md  SUPPORT.md  THIRD_PARTY_NOTICES.md  TRADEMARKS.md  openapi-spec.json  openapi-spec.yaml  package-lock.json  package.json
.github/: CODEOWNERS  FUNDING.yml  (+2 more)
model-stack/: .gitignore  Dockerfile.coord-serving  INTEGRATION_CONTRACT.md  Makefile  README.md  pyproject.toml  requirements-coord-serving.txt
model-stack/alignment/dpo/: dpo_config.yaml  train_dpo.py
model-stack/alignment/long_context/: extend_context.py
model-stack/alignment/preference/: build_preference_data.py
model-stack/alignment/reward_model/: train_reward.py
model-stack/alignment/rlhf_rlaif/: train_ppo.py
model-stack/alignment/safety/: safety_config.yaml  safety_tuning.py
model-stack/alignment/sft/: sft_config.yaml  train_sft.py  train_sft_coord.py
model-stack/alignment/tool_use/: tool_use_tuning.py
model-stack/data/contamination/: detect_contamination.py
model-stack/data/curation/: pii_filter.py  quality_filter.py
model-stack/data/dedup/: lexical_dedup.py  semantic_dedup.py
model-stack/data/feedback/: __init__.py  config.yaml  extract.py  load.py  synthesize_sft.py  teacher_traces.py  transform.py
model-stack/data/ingestion/: ingest.py
model-stack/data/mixing/: mix_datasets.py
model-stack/data/schemas/: dataset_manifest.py
model-stack/datasets/manifests/: base_pretrain.yaml
model-stack/docs/: architecture.md  checkpoint-governance.md  coordinator-stable-24.md  evaluation-policy.md  safety-policy.md  training-lifecycle.md
model-stack/evals/: compare_evaluations.py  evaluate_coord_decisions.py  runner.py  thresholds.yaml
model-stack/evals/__tests__/: test_compare_evaluations.py  test_evaluate_coord_decisions.py
model-stack/evals/coding/: humaneval.py
model-stack/evals/cost_latency/: throughput_bench.py
model-stack/evals/groundedness/: factuality_eval.py
model-stack/evals/long_context/: needle_haystack.py
model-stack/evals/reasoning/: gsm8k.py
model-stack/evals/robustness/: adversarial_eval.py
model-stack/evals/safety/: safety_eval.py
model-stack/evals/tool_use/: tool_calling_eval.py
model-stack/experiments/ablations/: ablation_runner.py
model-stack/experiments/tracking/: tracker.py
model-stack/flywheel/clustering/: cluster.py
model-stack/flywheel/failures/: capture.py
model-stack/flywheel/promotion/: promote.py
model-stack/flywheel/replay/: build_replay_set.py
model-stack/model/architectures/: transformer.py
model-stack/model/configs/: ailin-1b.yaml  ailin-3b.yaml  ailin-7b.yaml  ailin-tiny.yaml  model_spec.py
model-stack/model/scaling/: scaling_laws.py
model-stack/pretraining/configs/: pretrain_1b.yaml
model-stack/pretraining/distributed/: deepspeed_config.json
model-stack/pretraining/launcher/: train.py
model-stack/pretraining/resume/: resume.py
model-stack/registry/champion_challenger/: model_champion_challenger.py
model-stack/registry/models/: catalog.yaml  coordinator-stable.yaml  registry.py
model-stack/scripts/: smoke-coord-stable.sh  smoke_train_cpu.py
model-stack/serving/aggregation/: __init__.py  coord_serving.py  mock_cascade.py  teacher_proxy.py  tiered_voter.py
model-stack/serving/batching/: config.yaml
model-stack/serving/kv-cache/: config.yaml
model-stack/serving/quantization/: quantize.py
model-stack/serving/rollback/: rollback.py
model-stack/serving/rollout/: deploy.py
model-stack/serving/runtime/: serve.py
model-stack/smoke-run/: eval_report.json  training_metrics.json
model-stack/smoke-run/checkpoint/: config.json  generation_config.json  model.safetensors
(+2248 files in other folders)
